# puntonet-backend

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  docker-entrypoint.sh  env.template  main.py  pyproject.toml
alembic/: env.py
app/: lifespan.py
app/config/: base.py
app/core/: jwt.py  ws.py
app/core/db/: model.py  redis.py  sessionmanager.py
app/dependencies/: auth.py
app/managers/: base.py  users.py
app/models/: __init__.py  store.py  users.py
app/routes/: __init__.py
app/routes/http/: auth.py  store.py  user.py
app/routes/http/store/: __init__.py  products.py
app/routes/ws/: chat.py
app/schemas/: store.py  users.py
app/utils/: auth.py  encryption.py  media.py  store.py
